# trac_ik

trac_ik_kinematics/: CMakeLists.txt  package.xml
trac_ik_kinematics/trac_ik_kinematics_plugin/include/trac_ik_kinematics_plugin/: trac_ik_kinematics_plugin.h
trac_ik_kinematics/trac_ik_kinematics_plugin/src/: trac_ik_kinematics_plugin.cpp
