<?xml version="1.0"?>
<package format="3">
  <name>trac_ik_kinematics</name>
  <version>1.6.7</version>
  <description>A MoveIt! Kinematics plugin using TRAC-IK</description>
  <maintainer email="anton.weiss@th-deg.de">Anton Weiss</maintainer>
  <author>Patrick Beeson</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>tf2_kdl</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>trac_ik_lib</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/trac_ik_kinematics_plugin_description.xml"/>
  </export>
</package>
